# llvm-env

./: .gitignore  README.md
proj/first-steps/: CMakeLists.txt  ClangOverrides.txt  build.sh  cmake_uninstall.cmake.in
proj/first-steps/src/main/: CMakeLists.txt
proj/first-steps/src/main/src/: main.cxx  tocompile.cxx
tools-src/: build-clang-from-scratch.sh
